# AirToss

./: Cargo.toml  LICENSE  README.md
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/io/github/stasshe/airtoss/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/src/: app.dart
app/lib/src/discovery/: screen.dart
app/lib/src/model/: peer.dart
app/lib/src/verification/: screen.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: screens_test.dart
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
crates/core/: Cargo.toml
crates/core/src/: auth.rs  channel.rs  discovery.rs  lib.rs
docs/: 00-vision.md  01-requirements.md  02-ux.md  03-architecture.md  04-discovery-auth.md  05-transport.md  06-transfer-protocol.md  07-platform-notes.md  08-roadmap.md  SESSION_INTENT.md
