[package]
name = "airtoss-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ciborium = "0.2"
getrandom = "0.3"
hkdf = "0.12"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha2 = "0.10"
thiserror = "2"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = { version = "1", features = ["zeroize_derive"] }

[lints]
workspace = true
